--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -88,10 +88,10 @@
         android:id="@+id/updateProfileButton"
         android:layout_width="191dp"
         android:layout_height="71dp"
-        android:layout_marginBottom="148dp"
+        android:layout_marginBottom="20dp"
         android:onClick="handlerUpdateProfile"
         android:text="Update Profile"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/updatePasswordButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -106,10 +106,34 @@
         android:id="@+id/updatePasswordButton"
         android:layout_width="191dp"
         android:layout_height="71dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="20dp"
         android:onClick="handlerUpdatePassword"
         android:text="Update Password"
+        app:layout_constraintBottom_toTopOf="@+id/btnRecipe"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnRecipe"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:onClick="handleRecipe"
+        android:text="view recipe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnAddRecipe"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:onClick="handleUploadRecipe"
+        android:text="add recipe"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
